name:                ftp-client-conduit
version:             0.5.0.1
synopsis:            Transfer file with FTP and FTPS with Conduit
description:         ftp-client is a library for communicating with an FTP server. It works over both a clear channel or TLS. ftp-client-conduit uses conduit to stream files and data in constant space.
homepage:            https://github.com/mr/ftp-client
maintainer:          mrobinson7627@gmail.com
license:             PublicDomain
license-file:        LICENSE
author:              Matthew Robinson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.FTP.Client.Conduit
  build-depends:       base >= 4.7 && < 5
                     , ftp-client == 0.5.*
                     , conduit >= 1.1
                     , bytestring
                     , resourcet == 1.2.*
                     , connection
                     , exceptions
  default-language:    Haskell2010
  default-extensions:  RankNTypes, OverloadedStrings

test-suite ftp-conduit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ftp-clientconduit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mr/ftp-client
