name:                ftp-client
version:             0.5.1.2
synopsis:            Transfer files with FTP and FTPS
description:         ftp-client is a library for communicating with an FTP server. It works over both a clear channel or TLS.
homepage:            https://github.com/mr/ftp-client
license:             PublicDomain
maintainer:          mrobinson7627@gmail.com
license-file:        LICENSE
author:              Megan Robinson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.FTP.Client
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , network >=2.6.3.6 && <2.9
                     , attoparsec >= 0.10
                     , connection >= 0.2 && < 0.4
                     , transformers
                     , exceptions
                     , containers >=0.5.11.0 && <0.7
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite ftp-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >=4.11.1.0 && < 5
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mr/ftp-client
